# physical-ai-chessboard

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
arena_core/: __init__.py  annotations.py  cli.py  config.py  deliberation.py  engine.py  leaderboards.py  move_sources.py  parser.py  prompts.py  reports.py  reranker.py  risk_logprob_scorer.py  stats.py  telemetry.py  tournaments.py  utils.py
backend/: __init__.py  main.py
docs/: architecture.md  data-model.md  evals.md  improvement-analysis.md  move-loop-and-prompts.md
finetune/: README.md  __init__.py  _common.py  analyze_critic_choice_predictions.py  analyze_critic_ranker_dataset.py  analyze_pairwise_comparison_predictions.py  build_critic_choice_dataset.py  build_critic_choice_hardcase_eval.py  build_critic_pairwise_dataset.py  build_critic_ranker_dataset.py  build_dataset.py  build_error_mined_dataset.py  build_mixed_tactical_dataset.py  build_pairwise_comparison_eval.py  build_smoke_dataset.py  build_tactical_gate.py  chess_reward.py  distill_dataset.py  evaluate_baseline.py  evaluate_cpl.py  evaluate_critic_ranker_lora.py  evaluate_critic_risk_logprobs.py  evaluate_lora.py  export_ollama.py  sample_policy_candidates.py  smoke_train.py  train_grpo.py  train_lora.py
frontend/: index.html  package-lock.json  package.json
plans/: beating-stockfish-analysis.md  code-review-simplification.md  embodied-ai-chess-lab-plan.md  finetuning-chess-llm-plan.md
scripts/: build_finetune_dataset.py  install_stockfish.sh  run-dev.sh
tests/: test_annotations_reports.py  (+25 more)
(+44 files in other folders)
